[package]
name = "wasm_adder"
version = "0.1.0"
authors = ["Mark <markgoldstein12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]



# We want to tell the rust waht type of create type this is going to be
[lib]
            # We are setting the crate type to be a dynamic lib.
crate-type = ["cdylib"] 
# Now we can use cargo to compile this for us!
